syntax = "proto3";

package rig.v1;

option go_package = "thoreinstein.com/rig/pkg/api/v1;apiv1";

// PluginService is the core interface that all Rig plugins must implement.
service PluginService {
  // Handshake is the first call made by the host to verify compatibility and establish connection state.
  rpc Handshake(HandshakeRequest) returns (HandshakeResponse);
}

message HandshakeRequest {
  // api_version is the version of the Plugin API supported by the Rig host.
  string api_version = 1;
}

message HandshakeResponse {
  // plugin_id is the unique identifier for the plugin.
  string plugin_id = 3;
  // api_version is the version of the Plugin API implemented by the plugin.
  string api_version = 4;
  // capabilities is a list of features the plugin supports.
  repeated Capability capabilities = 5;

  // Reserved for backward compatibility with pre-v1
  reserved 1, 2;
  reserved "plugin_version", "capabilities_deprecated";
}

// Capability represents a specific feature or integration point provided by a plugin.
message Capability {
  // name is the unique name of the capability (e.g., "git.worktree").
  string name = 1;
  // version is the version of the capability implementation.
  string version = 2;
}
